 - Glacier API update: support for Vault Locking
 - EMR API update: Support for new Applications specification 
 - EC2 API update:
   - CreateRoute drops the ClientToken param
   - Support for SpotFleetLaunchSpecification
 - CloudWatch Logs API update: Support Destinations
 - RDS API update: Support for Aurora (new DBCluster calls)
 - Opsworks API update: support for RHEL7

0.13 17 Jul 2015
 - New API: DynamoDB Streams
 - New API: DeviceFarm
 - Paws::Credentials::File. Support for changing the filename via ENVIRONMENT (AWS_CONFIG_FILE)
 - Information for calculating region endpoints is moved into service classes, not the RegionInfo
   class that holds all endpoint information for all services.
 - Rename RegionalEndpointCaller role to EndpointResolver
 - Throw structured exception if an endpoint can't be calculated
 - Support for STS regional endpoint when used passing a region to $paws->service('STS', region => 'Desired region'). 
   $paws->service('STS') still uses the global sts.amazonaws.com endpoint
 - Paws::Credential::AssumeRole and Paws::Credential::STS support new sts_region attribute to select region. Default
   is to use the global region
 - Signin service working again (still hand-coded...)
 - paws cli now displays all attributes for call parameters, and their requiredness

0.12 09 Jul 2015
 - New API: CodePipeline
 - New API: CodeCommit
 - EC2 API update: copy encrypted snapshots between regions
 - SES API update: support for Sending Authorization
 - ECS API update
 - IAM update: support for SSH Keys
 - Autoscaling update: Support for scaling policies with steps
 - Fix DeleteMessageBatch,SendMessageBatch and ChangeMessageVisibilityBatch (thanks mbartold)

0.11 02 Jul 2015 
 - Bump up verion in response to: #105600: Please don't let your version length decrease (mst)

0.10 01 Jul 2015 
 - Don't dump request in EC2 Caller
 - Paws::Net::Caller was not correctly handling cases where the API only returns success (1) (osoriano)